# VideoAudioTranslateBot

./: .env  Makefile  docker-compose.yml  main.py  pyproject.toml
backend/: main.py
bot/handlers/: start_handler.py
bot/kb/: main_keyboard.py
bot/utils/: messages.py
config/: config.py
db/: dals.py  engine.py  enums.py  models.py
migrations/: env.py
