[project]
name = "videoaudioweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]
